[package]
name = "signrs"
version = "0.1.0"
edition = "2021"

[features]
eth = ["ethers", "futures"]
nist = ["p256"]
secp = ["k256"]

[dependencies]
ethers = { version = "2.0", optional = true }
futures = { version = "0.3", optional = true }
k256 = { version = "0.13", optional = true }
p256 = { version = "0.13", optional = true }
